<resources>
    <string name="app_name">BookazonApp</string>
    <string name="logo_description">logo</string>
    <string name="nameApp">Bookazon</string>
    <string name="et_email">Email</string>
    <string name="password">Contraseña</string>
    <string name="btn_login">Login</string>
    <string name="tv_signup">REGÍSTRATE EN LA APP</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="signupTitle">¡Regístrate en Bookazon!</string>
    <string name="rg_name">Nombre</string>
    <string name="rg_surname">Apellidos</string>
    <string name="rg_email">Email</string>
    <string name="rg_password">Contraseña</string>
    <string name="rg_password2">Repita su contraseña</string>
    <string name="rg_dni">DNI</string>
    <string name="rg_phone">Teléfono</string>
    <string name="rg_doSignUp">CONFIRMAR</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_bibliotecas">Bibliotecas</string>
    <string name="title_reservas">Reservas</string>
    <string name="title_profile">Perfil</string>
    <string name="action_show_map">Mostrar mapa</string>
    <string name="action_show_list">Mostrar lista</string>
    <string name="b_name">Nombre :</string>
    <string name="biblioteca_name">biblioteca</string>
    <string name="dt_CopyList">Lista de copias</string>
    <string name="copy_title">Titulo de la copia</string>
    <string name="copy_author">Nombre del Autor</string>
    <string name="copy_gender">"Género "</string>
    <string name="copyEditorial">Editorial</string>
    <string name="copyISBN">ISBN</string>
    <string name="img_description">image</string>
    <string name="btn_reservar">RESERVAR</string>
    <string name="copy_resumen">Resumen</string>
    <string name="tv_biblioteca">Biblioteca</string>
    <string name="tv_fechaReserva">Fecha de reserva</string>
    <string name="completeName">Nombre y apellidos</string>
    <string name="logout">Salir</string>
    <string name="deleteReserva">ELIMINAR RESERVA</string>
    <string name="title_map">Mapa</string>
    <string name="editProfile">Editar tus datos</string>
    <string name="genre">Generos</string>
    <string name="authors">Autores</string>
</resources>
