<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_bibliotecas">

    <fragment
        android:id="@+id/navigation_bibliotecas"
        android:name="com.santiagorodriguezalberto.bookazonapp.ui.biblioteca.map.MapBibliotecaFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_map_biblioteca" />

    <fragment
        android:id="@+id/navigation_reservas"
        android:name="com.santiagorodriguezalberto.bookazonapp.ui.reserva.list.ReservaFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_reserva_list" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.santiagorodriguezalberto.bookazonapp.ui.profile.UserProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_user_profile" />
</navigation>
