<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.EditUserActivity">

    <TextView
        android:id="@+id/tv_titleEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/editProfile"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/rg_name"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titleEdit" />

    <EditText
        android:id="@+id/et_editApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/rg_surname"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/et_editName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_editName"
        app:layout_constraintTop_toBottomOf="@+id/et_editName" />

    <EditText
        android:id="@+id/et_editEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/rg_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/et_editApellidos"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_editApellidos"
        app:layout_constraintTop_toBottomOf="@+id/et_editApellidos" />

    <EditText
        android:id="@+id/et_editDNI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/rg_dni"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/et_editEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_editEmail"
        app:layout_constraintTop_toBottomOf="@+id/et_editEmail" />

    <EditText
        android:id="@+id/et_editPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/rg_phone"
        android:inputType="phone"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/et_editDNI"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_editDNI"
        app:layout_constraintTop_toBottomOf="@+id/et_editDNI" />

    <Button
        android:id="@+id/btn_editar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/editProfile"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/et_editPhone"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/et_editPhone"
        app:layout_constraintTop_toBottomOf="@+id/et_editPhone" />
</androidx.constraintlayout.widget.ConstraintLayout>